--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@ android:orientation="vertical">
     android:layout_height="48sp"
     android:layout_marginTop="20dp"
     android:backgroundTint="@color/head_text"
-    android:text="Login"
+    android:text="Let's Gooooo!"
     android:textColor="@color/black" />
 
 <TextView
